<resources>
    <string name="app_name">OnePunchQuiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jeremias Neres</string>
    <string name="nav_header_subtitle">jeremiasneres23@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Info</string>

    <string name="menu_home">Anime</string>
    <string name="menu_perguntas">Perguntas</string>
    <string name="menu_resultado">Resultado</string>
    <string name="menu_share">Compartilhar</string>

    <string name="Open">aberto</string>
    <string name="Close">fechado</string>

    <string name="txt_sinopse">
        One Punch-Man (ワンパンマン Wanpanman) é uma série de
        webcomic criada pelo autor com o pseudónimo One, e é
        publicada desde 2009. One Punch-Man conta a história
        de Saitama,um super-herói extremamente poderoso, que
        se entediou com a ausência dos desafios nas suas lutas
        contra o mal e procura encontrar um oponente digno.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pergunta_1">1 - No universo de one punch man, há quantos heróis classe S ?</string>
    <string name="pergunta_2">2 - Qual o nome do autor de one punch man?</string>
    <string name="pergunta_3">3 - Quanto Saitama tira na prova escrita da organização de superheróis?</string>
    <string name="pergunta_4">4 - Qual é a cor do primeiro supervilão que Saitama enfrentou no anime?</string>
</resources>
