<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jeremiasneres.onepunchquiz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perguntas"
        android:name="com.jeremiasneres.onepunchquiz.ui.gallery.GalleryFragment"
        android:label="@string/menu_perguntas"
        tools:layout="@layout/fragment_perguntas" />

    <fragment
        android:id="@+id/nav_resultado"
        android:name="com.jeremiasneres.onepunchquiz.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_resultado"
        tools:layout="@layout/fragment_resultado" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.jeremiasneres.onepunchquiz.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>