<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/titleQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quiz\n One Punch Man"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pergunta_1"
        android:textSize="40dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/pergunta_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resposta_1"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/resposta_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pergunta_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/pergunta_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_2"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resposta_2"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/resposta_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/pergunta_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/resposta_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/resposta_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pergunta_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/pergunta_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_4"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/resposta_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/resposta_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pergunta_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        app:layout_constraintTop_toBottomOf="@id/resposta_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#fff"
        android:background="#FF5252"
        />

</androidx.constraintlayout.widget.ConstraintLayout>